git subrepo clone --force git://github.com/Tux/CSV.git Tux/CSV
subrepo:
  subdir:   "Tux/CSV"
  merged:   "6992733"
upstream:
  origin:   "git://github.com/Tux/CSV.git"
  branch:   "master"
  commit:   "6992733"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/Tux/CSV/Text-CSV.pod
+++ b/Tux/CSV/Text-CSV.pod
@@ -1798,6 +1798,10 @@ with L</csv>, you could do
 
  my @column = csv(in => "file.csv", fragment => "col=4").map(*[0]);
 
+or
+
+ my @column = csv(in => "file.csv", fragment => "col=4").map(*.flat);
+
 =head2 Parsing CSV strings:
 
  my $csv = Text::CSV.new(:keep_meta);
