git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "13d6631"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "13d6631"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/lib/Language/nativecall.pod
+++ b/perl6/doc/lib/Language/nativecall.pod
@@ -266,9 +266,13 @@ instead:
 
 =head1 Typed Pointers
 
+=comment TODO
+
 TBD
 
 =head1 Buffers and Blobs
+
+=comment TODO
 
 TBD
 
@@ -287,6 +291,8 @@ Perl 6 callbacks this way. In other words, NativeCall will not free() strings pa
 to callbacks.
 
 =head1 Library Paths and Names
+
+=comment TODO
 
 TBD
 
