--- a/perl6/doc/lib/Language/subscripts.pod
+++ b/perl6/doc/lib/Language/subscripts.pod
@@ -254,6 +254,8 @@ entire arrays / hashes into strings:
 
 =head1 Modifying elements
 
+=comment TODO
+
 =head1 Autovivification
 
 Subscripts participate in "autovivification", i.e. the process by which arrays
