--- a/perl6/doc/lib/Language/syntax.pod
+++ b/perl6/doc/lib/Language/syntax.pod
@@ -347,30 +347,26 @@ arrays themselves:
     # does not flatten:
     say [[@a], [3, 4]].elems;   # 2
 
-=begin comment
-
 =head3 Hash literals
 
-TODO
+=comment TODO
 
 =head3 Regex literals
 
-TODO
+=comment TODO
 
 =head2 Declarations
 
-TODO
+=comment TODO
 
 =head2 Subroutine calls
 
-TODO
+=comment TODO
 
 =head1 Operators
 
-TODO: link to language/operators
+=comment TODO: link to language/operators
 
 =head1
-
-=end comment
 
 =end pod
