--- a/perl6/doc/lib/Language/unicode_entry.pod
+++ b/perl6/doc/lib/Language/unicode_entry.pod
@@ -26,6 +26,15 @@ example, the Greek letter λ (lambda) is entered via the key combination:
 
     ^Vu03BB
 
+You can also use C<Ctrl-K>/C<^K> along with a digraph to type in some
+characters.  So an alternative to the above using digraphs looks like this:
+
+    ^Kl*
+
+The list of digraphs Vim provides is documented
+L<here|http://vimdoc.sourceforge.net/htmldoc/digraph.html>; you can add
+your own with the C<:digraph> command.
+
 Further information about entering special characters in Vim can be found on
 the Vim Wikia page about L<entering special
 characters|http://vim.wikia.com/wiki/Entering_special_characters>.
