--- a/perl6/doc/lib/Type/Baggy.pod
+++ b/perl6/doc/lib/Type/Baggy.pod
@@ -13,29 +13,55 @@ L<Mixy>.
 
 =head2 method grab
 
+=comment TODO
+
 =head2 method grabpairs
+
+=comment TODO
 
 =head2 method pick
 
+=comment TODO
+
 =head2 method pickpairs
+
+=comment TODO
 
 =head2 method roll
 
+=comment TODO
+
 =head2 method classify-list
+
+=comment TODO
 
 =head2 method categorize-list
 
+=comment TODO
+
 =head2 method keys
+
+=comment TODO
 
 =head2 method values
 
+=comment TODO
+
 =head2 method kv
+
+=comment TODO
 
 =head2 method elems
 
+=comment TODO
+
 =head2 method total
 
+=comment TODO
+
 =head2 method ACCEPTS
+
+=comment TODO
 
 =head1 See Also
 
