--- a/perl6/doc/lib/Type/IO/Handle.pod
+++ b/perl6/doc/lib/Type/IO/Handle.pod
@@ -43,6 +43,18 @@ Return a lazy list of the file's lines read via L<get>, limited to C<$limit> lin
         @data.push($line.split(','))
     }
 
+=head2 method words
+
+    method words($count = Inf)
+
+Return a lazy list of the file's words (separated on whitespace), limited
+to C<$count> words.
+
+    =for code :allow<B>
+    my %dict;
+    ++%dict{$_} for $*IN.words;
+    say "Most common words: ", %dict.sort(*.value).reverse.[^5];
+
 =head2 method print
 
     method print(*@text --> Bool)
@@ -91,6 +103,12 @@ The end of the file.
     method tell(IO::Handle:D: --> Int)
 
 Return the current position of the file pointer in bytes.
+
+=head2 method ins
+
+    method ins(IO::Handle:D: --> Int)
+
+Return the number of lines read from the file.
 
 =head2 method slurp-rest
 
