--- a/perl6/doc/lib/Type/IO/Path.pod
+++ b/perl6/doc/lib/Type/IO/Path.pod
@@ -265,6 +265,16 @@ operation could not be completed.
 Please use L<move|/routine/move> if a file could not be moved by renaming
 (usually because the destination is on a different physical storage device).
 
+=head2 routine copy
+
+    method copy(IO::Path:D: $to, :$createonly)
+    sub    copy($from, $to, :$createonly);
+
+Copies a file, as indicated by C<$from> or the invocant, to the
+destination specified.  If C<:createonly> is set to C<True>, copy fails if a file
+already exists in the destination.  Returns C<True> upon success, or an
+appropriate C<Failure> if the operation could not be completed.
+
 =head2 routine move
 
     method move(IO::Path:D: $to, :$createonly)
@@ -279,8 +289,6 @@ could not be completed.
 Please use L<rename|/routine/rename> if a file can be moved by renaming
 (which is usually possible if the destination is on the same different
 physical storage device).
-
-B<NOTE>: This function has not yet been implemented in Rakudo.
 
 =head2 routine symlink
 
