--- a/perl6/doc/lib/Type/Str.pod
+++ b/perl6/doc/lib/Type/Str.pod
@@ -205,10 +205,10 @@ Examples:
 
 =head2 routine comb
 
-    multi sub    comb(Str:D   $matcher, Str:D $input, $limit = Inf, Bool :$match)
+    multi sub    comb(Str:D   $matcher, Str:D $input, $limit = Inf)
     multi sub    comb(Regex:D $matcher, Str:D $input, $limit = Inf, Bool :$match)
     multi method comb(Str:D $input:)
-    multi method comb(Str:D $input: Str:D   $matcher, $limit = Inf, Bool :$match)
+    multi method comb(Str:D $input: Str:D   $matcher, $limit = Inf)
     multi method comb(Str:D $input: Regex:D $matcher, $limit = Inf, Bool :$match)
 
 Searches for C<$matcher> in C<$input> and returns a list of all matches
