--- a/perl6/doc/lib/Type/Supply.pod
+++ b/perl6/doc/lib/Type/Supply.pod
@@ -114,7 +114,7 @@ Method C<tap> returns an object of type L<Tap|/type/Tap>, on which you can
 call the C<close> method to cancel the subscription.
 
     my $s = Supply.interval(1);
-    my $t = $s.tap(-> $v { say $v }, done => { say "no more ticks" };
+    my $t = $s.tap(-> $v { say $v }, done => { say "no more ticks" });
     sleep 5;
     $s.done;
 
@@ -309,7 +309,7 @@ Returns a new supply that maps each value of the given supply through
 C<&mapper> and emits it to the new supply.
 
     my $all    = Supply.new;
-    my $double = $all.map(-> $value { $value * 2 };
+    my $double = $all.map(-> $value { $value * 2 });
     $double.tap(&say);
     $all.emit(4);           # 8
 
@@ -497,6 +497,6 @@ file system for the given path.  Also has a shortcut with the C<watch> method
 on an IO object, like this:
 
     IO::Notification.watch-path(".").act( { say "$^file changed" } );
-    ".'.IO.watch.act(                     { say "$^file changed" } );   # same
+    ".".IO.watch.act(                     { say "$^file changed" } );   # same
 
 =end pod
