git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "d20da36"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "d20da36"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -1353,7 +1353,7 @@ L<http://www.perlito.org/perlito/perlito5to6.html>
 Larry Wall's own code for translating Perl 5 to Perl 6 has bit-rotted, and
 is not (currently) viable on recent releases of Perl 5.
 
-MAD (Misc Attribute Definition) is an configuration option when building
+MAD (Misc Attribute Definition) is a configuration option when building
 Perl from a source distribution. The `perl` executable analyses and
 translates your Perl sourcecode into an op-tree, and then executes the
 program by walking the op-tree. Normally, most of the details from the
@@ -1363,6 +1363,17 @@ read and further processed into Perl 6 code by a MAD parser.
 
 Please consult #perl6 to find out the best release of Perl 5 to use for
 your MAD science experiments.
+
+=head3 Perl-ToPerl6
+
+Jeff Goff's Perl::ToPerl6 module for Perl 5 is designed around
+Perl::Critic's framework. It aims to convert Perl5 to compilable (if not
+necessarily running) Perl6 code with the bare minimum of changes. Code
+transformers are configurable and pluggable, so you can create and
+contribute your own transformers, and customize existing transformers to
+your own needs. You can install the latest release from CPAN, or follow
+the project live on GitHub. An online converter may become available at
+some point.
 
 =head2 Other sources of translation knowledge
 
