--- a/perl6/doc/lib/Type/Metamodel/PrivateMethodContainer.pod
+++ b/perl6/doc/lib/Type/Metamodel/PrivateMethodContainer.pod
@@ -41,8 +41,8 @@ Returns a hash of C«name => &method_object»
 
 =begin comment
 
-# TODO: document find_private_method, once we've figured out how to represent
-# or catch nqp::null in Perl 6 land
+TODO: document find_private_method, once we've figured out how to represent
+or catch nqp::null in Perl 6 land
 
 =end comment
 
