--- a/perl6/doc/lib/Type/MixHash.pod
+++ b/perl6/doc/lib/Type/MixHash.pod
@@ -65,9 +65,12 @@ the mix, and the (cumulative) values become the associated numeric weights:
 
 =head1 Operators
 
-=for comment
+=begin comment
+
 TODO: Expand this section (using the corresponding section in
 lib/Type/BagHash.pod as a guide) after ab5tract's set/bag/mix operator redesign.
+
+=end comment
 
 See L<setbagmix#Set/Bag Operators> for a complete list of set and bag operators
 with detailed explanations.
