--- a/perl6/doc/lib/Type/Temporal.pod
+++ b/perl6/doc/lib/Type/Temporal.pod
@@ -80,6 +80,30 @@ appropriate point in time, and cast to an C<Instant>.
         minute => 5);
     say sleep-till $instant.Instant  # => True (eventually...)
 
+This could be be used as a primitive kind of alarm clock.  For instance, say
+you need to get up at 7am on the 4th of September 2015, but for some reason
+your usual alarm clock is broken and you only have your laptop.  You can
+specify the time to get up (being careful about timezones, since
+C<DateTime.new> uses UTC by default) as an C<Instant> and pass this to
+C<sleep-till>, after which you can play an mp3 file to wake you up instead
+of your normal alarm clock.  This scenario looks roughly like this:
+
+    # DateTime.new uses UTC by default, so get timezone from current time
+    my $timezone = DateTime.now.timezone;
+    my $instant = DateTime.new(
+        year => 2015,
+        month => 9,
+        day => 4,
+        hour => 7,
+        minute => 0,
+        timezone => $timezone
+    ).Instant;
+    sleep-till $instant;
+    qqx{mplayer wake-me-up.mp3};
+
+This code, if necessary, can run as a one-liner so you can e.g. get up in
+time for the talks at YAPC.
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
